# minitype

./: .gitignore  Cargo.toml  README.md
docs/: SPEC.md  SPECIFICATION.md
example/: otf.meta.json  otf.zaf  sf.json  sf.zaf
minitype/: Cargo.toml
minitype-cli/: Cargo.toml
minitype-cli/src/: atlas.rs  font.rs  main.rs  ttfgen.rs
minitype/src/: glyph.rs  lib.rs  style.rs
samples/: arvo_regular_13.mtf  delius_regular_13.mtf  exo2_regular_13.mtf  noto_sans_regular_13.mtf  playfair_display_regular_13.mtf
src/: atlas.rs  font.rs  lib.rs  main.rs
