[package]
  edition = "2024"
  name    = "oi"
  version = "0.1.0"

[dependencies]
  anyhow = "1.0.99"
  clap = { version = "4.5", features = ["derive"] }
  flate2 = "1"
  image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "pnm",
    "tiff",
    "bmp",
  ] }
  zstd = { version = "0.13", features = ["legacy"] }
