[package]
  edition = "2024"
  name    = "zaf"
  version = "0.1.0"

[dependencies]
  anyhow = "1.0.99"
  clap = { version = "4.5", features = ["derive"] }
  flate2 = "1"
fontdue = "0.9.3"
  heapless = "0.8.0"
  image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "pnm",
    "tiff",
    "bmp",
  ] }
  serde = { version = "1.0.219", features = ["derive"] }
  serde_json = "1.0.142"
  zstd = { version = "0.13", features = ["legacy"] }
