[workspace.package]
  edition = "2024"
  version = "0.0.1"

  documentation = "https://docs.rs/minitype/"
  homepage      = "https://github.com/dempfi/minitype"
  license       = "MIT OR Apache-2.0"
  readme        = "README.md"
  repository    = "https://github.com/dempfi/minitype"

[workspace]
  members  = ["minitype", "minitype-cli"]
  resolver = "3"
