[package]
  keywords = ["embedded"]
  name     = "minitype-cli"

  documentation.workspace = true
  edition.workspace       = true
  homepage.workspace      = true
  license.workspace       = true
  readme.workspace        = true
  repository.workspace    = true
  version.workspace       = true

[[bin]]
  name = "minitype"
  path = "src/main.rs"

[dependencies]
  anyhow      = "1.0.99"
  clap        = { version = "4.5", features = ["derive"] }
  cosmic-text = "0.14.2"
  image       = { version = "0.25" }
  serde       = { version = "1.0.219", features = ["derive"] }
  serde_json  = "1.0.142"
  swash       = { version = "0.2.5", features = ["render", "scale"] }

[target.'cfg(target_os = "macos")'.dependencies]
  core-foundation = "0.10"
  core-graphics   = "0.25"
  core-text       = "21"
