[package]
  keywords = ["embedded"]
  name     = "minitype-cli"

  documentation.workspace = true
  edition.workspace       = true
  homepage.workspace      = true
  license.workspace       = true
  readme.workspace        = true
  repository.workspace    = true
  version.workspace       = true

[[bin]]
  name = "minitype"
  path = "src/main.rs"

[dependencies]
  anyhow              = "1.0.99"
  clap                = { version = "4.5", features = ["derive"] }
  image               = { version = "0.25" }
  rayon               = "1.11.0"
  serde               = { version = "1.0.219", features = ["derive"] }
  serde_json          = "1.0.142"
  ttf-parser          = "0.25.1"
  webrender_api       = { git = "https://github.com/servo/webrender.git" }
  wr_glyph_rasterizer = { git = "https://github.com/servo/webrender.git" }
