[package]
  keywords = ["embedded"]
  name     = "minitype"

  documentation.workspace = true
  edition.workspace       = true
  homepage.workspace      = true
  license.workspace       = true
  readme.workspace        = true
  repository.workspace    = true
  version.workspace       = true

[dependencies]
  defmt = { version = "0.1.0", optional = true }

[features]
  defmt = ["dep:defmt"]
