[package]
  keywords = ["embedded"]
  name     = "minitype"

  documentation.workspace = true
  edition.workspace       = true
  homepage.workspace      = true
  license.workspace       = true
  readme.workspace        = true
  repository.workspace    = true
  version.workspace       = true

[dependencies]
  defmt                  = { version = "0.1.0", optional = true }
  embedded-graphics      = "0.8.1"
  embedded-graphics-core = "0.4.0"
  embedded-rgba          = "0.1.0"

[features]
  defmt = ["dep:defmt"]
